<resources>
    <string name="app_name">Google Tasks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_task">Task List</string>
    <string name="menu_chart">Charts</string>
    <string name="menu_statistic">Statistic</string>
    <string name="menu_share">Share Statistic</string>
    <string name="title_activity_tas_list">TasListActivity</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="large_text">Large text</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="welcome_message">Welcome</string>
    <string name="welcome_message_info">Please log in to google account</string>
    <string name="google_client_id">AIzaSyDlUwYj6vflevHaHINzb1jvU47qTdg5TUw</string>
</resources>
