<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_task"
                android:icon="@drawable/ic_task_lists"
                android:title="@string/menu_task"/>
        <item
                android:id="@+id/nav_chart"
                android:icon="@drawable/ic_chart"
                android:title="@string/menu_chart"/>
        <item
                android:id="@+id/nav_statistic"
                android:icon="@drawable/ic_statistic"
                android:title="@string/menu_statistic"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
        </menu>
    </item>

</menu>
